// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the correct checkout cart summary with multiple line items 1`] = `
<CheckoutCart
  cart={
    Object {
      "lineItems": Array [
        Object {
          "discount": 0,
          "price": "10.00",
          "quantity": 2,
          "title": "Test Product",
        },
        Object {
          "discount": 0,
          "price": "5.00",
          "quantity": 1,
          "title": "Pretend Product",
        },
      ],
    }
  }
>
  <div
    aria-label="Cart items summary"
    className="o-checkout-cart"
  >
    <div
      className="o-checkout-cart__header"
    >
      <div>
        <h2 />
      </div>
      <div>
        <Link
          href="/cart"
        >
          <a
            aria-label="Edit your cart"
            className="o-button o-button--lrg"
            href="/cart"
            onClick={[Function]}
          >
            Edit Cart
          </a>
        </Link>
      </div>
    </div>
    <div
      className="o-checkout-cart__wrapper"
    >
      <div
        aria-label="Product"
        className="o-checkout-cart__product"
        key="0"
      >
        <div
          className="o-checkout-cart__image"
        >
          <Image
            alt="Test Product"
            aria-label="Test Product"
            width={80}
          >
            <div
              className="c-dummy_image"
              style={
                Object {
                  "height": undefined,
                  "width": 80,
                }
              }
            />
          </Image>
        </div>
        <ul
          className="o-checkout-cart__info"
        >
          <li
            aria-label="Product title"
          >
            Test Product
          </li>
          <li
            aria-label="Quantity"
          >
            Qty: 
            2
          </li>
          <li
            aria-label="Price"
          >
            Price: £
            10.00
          </li>
          <li
            aria-label="Subtotal"
          >
            Subtotal: £
            20
          </li>
        </ul>
      </div>
      <div
        aria-label="Product"
        className="o-checkout-cart__product"
        key="1"
      >
        <div
          className="o-checkout-cart__image"
        >
          <Image
            alt="Pretend Product"
            aria-label="Pretend Product"
            width={80}
          >
            <div
              className="c-dummy_image"
              style={
                Object {
                  "height": undefined,
                  "width": 80,
                }
              }
            />
          </Image>
        </div>
        <ul
          className="o-checkout-cart__info"
        >
          <li
            aria-label="Product title"
          >
            Pretend Product
          </li>
          <li
            aria-label="Quantity"
          >
            Qty: 
            1
          </li>
          <li
            aria-label="Price"
          >
            Price: £
            5.00
          </li>
          <li
            aria-label="Subtotal"
          >
            Subtotal: £
            5
          </li>
        </ul>
      </div>
    </div>
  </div>
</CheckoutCart>
`;

exports[`renders the correct checkout cart summary with single line item 1`] = `
<CheckoutCart
  cart={
    Object {
      "lineItems": Array [
        Object {
          "discount": 0,
          "imageUrl": "",
          "price": "10.00",
          "quantity": 2,
          "size": "size - 8",
          "sku": "123",
          "title": "Test Product",
        },
      ],
    }
  }
  title="Checkout Cart Summary"
>
  <div
    aria-label="Cart items summary"
    className="o-checkout-cart"
  >
    <div
      className="o-checkout-cart__header"
    >
      <div>
        <h2>
          Checkout Cart Summary
        </h2>
      </div>
      <div>
        <Link
          href="/cart"
        >
          <a
            aria-label="Edit your cart"
            className="o-button o-button--lrg"
            href="/cart"
            onClick={[Function]}
          >
            Edit Cart
          </a>
        </Link>
      </div>
    </div>
    <div
      className="o-checkout-cart__wrapper"
    >
      <div
        aria-label="Product"
        className="o-checkout-cart__product"
        key="0"
      >
        <div
          className="o-checkout-cart__image"
        >
          <Image
            alt="Test Product"
            aria-label="Test Product"
            src=""
            width={80}
          >
            <div
              className="c-dummy_image"
              style={
                Object {
                  "height": undefined,
                  "width": 80,
                }
              }
            />
          </Image>
        </div>
        <ul
          className="o-checkout-cart__info"
        >
          <li
            aria-label="Product title"
          >
            Test Product
          </li>
          <li
            aria-label="Quantity"
          >
            Qty: 
            2
          </li>
          <li
            aria-label="Price"
          >
            Price: £
            10.00
          </li>
          <li
            aria-label="Subtotal"
          >
            Subtotal: £
            20
          </li>
        </ul>
      </div>
    </div>
  </div>
</CheckoutCart>
`;
